--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  sqflite: ^2.2.2
+  path_provider: ^2.0.11
+  path: ^1.8.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
